--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,18 @@ __pycache__/
 # C extensions
 *.so
 
-.vscode
+# vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
+# Env Variables
 .env
 
 # Distribution / packaging
