--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ mongoengine>=0.20.0,<1
 bcrypt>=3.1.7,<4
 pyjwt>=1.7.1,<2
 faker>=4.1.0,<5
+pytest-cov>=2.9.0,<3
+colorama>=0.4.3,<1
+inject>=4.2.0,<5
