--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\PythonProjects\\maintesoft\\env\\Scripts\\python.exe",
+    "python.pythonPath": "c:\\PythonProjects\\maintesoft\\.env\\Scripts\\python.exe",
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true
